style.css
@font-face {
    font-family: 'OpenDyslexic';
    src: url("OpenDyslexic-Regular.otf");
    font-weight: normal;
    font-style: normal;
}

html {
    min-height: 100%; /*this is stupid, why do I need this??*/
}

body {
    background: linear-gradient(145deg, rgba(63,2,107,1) 0%, rgba(113,35,147,1) 25%, rgba(136,7,166,1) 50%, rgba(191,6,157,1) 75%, rgba(222,0,129,1) 100%); 
    max-width: 2000px;
    margin: auto;
    font-family: 'OpenDyslexic';
}

p {
    margin: 0px 16px 0px 16px;
}

.mark {
    border-bottom: 1px solid #000;
    top: -14px;
    position: relative;
}

.offsetMark {
    position: relative;
    top: 14px;
}

.top_bar {
    width: 450px;
    margin: auto;
    background: #22222222;
    border-radius: 7px;
}

.main_box {
    background: #22222222;
    margin: 0px 100px 0px 100px;
    border-radius: 7px;
}

.top_bar, .main_box h2, .bottom_bar {
    text-align: center;
}

.bottom_bar {
    font-size: small;
    margin-bottom: 5px;
}

@keyframes rainbow {
    0%                  {background: rgba(228, 3, 3, 0.700);}
    16.66666666666667%  {background: rgba(255, 140, 0, 0.700);}
    33.33333333333333%  {background: rgba(255, 237, 0, 0.700);}
    50%                 {background: rgba(0, 128, 38, 0.700);}
    66.66666666666667%  {background: rgba(0, 76, 255, 0.700);}
    83.33333333333334%  {background: rgba(115, 41, 130, 0.700);}
    100%                {background: rgba(228, 3, 3, 0.700);}
}

@-webkit-keyframes rainbow {
    0%                  {background: rgba(228, 3, 3, 0.700);}
    16.66666666666667%  {background: rgba(255, 140, 0, 0.700);}
    33.33333333333333%  {background: rgba(255, 237, 0, 0.700);}
    50%                 {background: rgba(0, 128, 38, 0.700);}
    66.66666666666667%  {background: rgba(0, 76, 255, 0.700);}
    83.33333333333334%  {background: rgba(115, 41, 130, 0.700);}
    100%                {background: rgba(228, 3, 3, 0.700);}
}
         
a:hover, a:focus {
    animation-name: rainbow;
    animation-duration: 3s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-direction: normal;
    -webkit-animation-name: rainbow;
    -webkit-animation-duration: 3s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-direction: normal;
    color: white;
    text-shadow: 1px 1px 1px black;
    text-decoration: none;
    outline: none;
}

a {
    border-radius: 7px;
}

::selection {
    background-color: #f723be;
    color: #FFFFFF;
}

